--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220116214605">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220116224147">
 	<link rel="shortcut icon" href="favicon.phg">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,28 +62,26 @@
 									I<br>You<br>We<br>They
 								</div>
 								<div class="grid__denial">don't</div>
-								<div class="grid__verb">V</div>
+								<div class="grid__verb stretching">V</div>
 								<div class="grid__pronouns-3">
 									He<br>She<br>It
 								</div>
 								<div class="grid__denial">doesn't</div>
-								<div class="grid__verb">Vs</div>
 							</div>
 						</div>
 					</div>
 					<div class="simple-time__grid grid">
 						<div class="grid__tense question">
 							<div class="grid__pronouns colom-3">
-								<div class="grid__word-question">Did</div>
+								<div class="grid__word-question">Do</div>
 								<div class="grid__pronouns-general">
 									i<br>you<br>we<br>they
 								</div>
-								<div class="grid__verb">V?</div>
+								<div class="grid__verb stretching">V?</div>
 								<div class="grid__word-question">Does</div>
-								<div class="grid__pronouns-3">
+								<div class="grid__pronouns-3 ">
 									he<br>she<br>it
 								</div>
-								<div class="grid__verb">Vs?</div>
 							</div>
 						</div>
 					</div>
@@ -118,11 +116,12 @@
 					<!--Fu ---------------------------------------------------------------------- -->
 					<div class="grid__tense additional-padding statement">
 						<div class="grid__mark future-mark">Fu</div>
-						<div class="grid__pronouns colom-1">
+						<div class="grid__pronouns colom-1-3">
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They<br>He<br>She<br>It
 							</div>
-							<div class="grid__verb">Ved<br><span>V2</span></div>
+							<div class="grid__word-question">will</div>
+							<div class="grid__verb">Ved</div>
 						</div>
 					</div>
 					<div class="grid__tense denial">
@@ -165,7 +164,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20220116214605"></script>
+	<script src="js/app.min.js?_v=20220116224147"></script>
 </body>
 
 </html>
