--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220116224147">
-	<link rel="shortcut icon" href="favicon.phg">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220120184842">
+	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -38,21 +38,21 @@
 							<div class="tenses__text">Simple</div>
 						</li>
 					</a>
-					<!-- <a href="" class="tensec__link">
+					<a href="continuous.html" class="tensec__link">
 						<li class="tenses__box">
 							<div class="tenses__text">Continuous</div>
 						</li>
 					</a>
-					<a href="" class="tensec__link">
+					<a href="perfect.html" class="tensec__link">
 						<li class="tenses__box">
 							<div class="tenses__text">Perfect</div>
 						</li>
 					</a>
-					<a href="" class="tensec__link">
+					<a href="perfect_continuous.html" class="tensec__link">
 						<li class="tenses__box">
 							<div class="tenses__text">Perfect<br>continuous</div>
 						</li>
-					</a> -->
+					</a>
 				</ul>
 			</section>
 		</main>
@@ -74,7 +74,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20220116224147"></script>
+	<script src="js/app.min.js?_v=20220120184842"></script>
 </body>
 
 </html>
