--- a/perfect.html
+++ b/perfect.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Simple</title>
+	<title>Perfect</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </header> -->
-		<main class="page page-simple">
+		<main class="page page-perfect">
 			<section class="tense-time">
 				<div data-spollers class="tense-time__container">
 
@@ -49,15 +49,16 @@
 
 					<div data-da=".spollers__statement, 600" class="grid__tense additional-padding statement">
 						<div class="grid__mark present-mark">Pr</div>
-						<div class="grid__pronouns">
+						<div class="grid__pronouns colom-3">
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They
 							</div>
-							<div class="grid__verb">V</div>
-							<div class="grid__pronouns-3">
+							<div class="grid__word-question">have</div>
+							<div class="grid__verb stretching">Ved<br>V3</div>
+							<div class="grid__pronouns-general">
 								He<br>She<br>It
 							</div>
-							<div class="grid__verb">Vs</div>
+							<div class="grid__word-question">has</div>
 						</div>
 					</div>
 					<div data-da=".spollers__denial, 600" class="grid__tense denial">
@@ -66,24 +67,24 @@
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They
 							</div>
-							<div class="grid__denial">don't</div>
-							<div class="grid__verb stretching">V</div>
-							<div class="grid__pronouns-3">
+							<div class="grid__word-question">have not</div>
+							<div class="grid__verb stretching">Ved<br>V3</div>
+							<div class="grid__pronouns-general">
 								He<br>She<br>It
 							</div>
-							<div class="grid__denial">doesn't</div>
+							<div class="grid__word-question">has not</div>
 						</div>
 					</div>
 					<div data-da=".spollers__question, 600" class="grid__tense question">
 						<div class="grid__mark present-mark hide-mark">Pr</div>
 						<div class="grid__pronouns colom-3">
-							<div class="grid__word-question">Do</div>
+							<div class="grid__word-question">Have</div>
 							<div class="grid__pronouns-general">
 								i<br>you<br>we<br>they
 							</div>
-							<div class="grid__verb stretching">V?</div>
-							<div class="grid__word-question">Does</div>
-							<div class="grid__pronouns-3 ">
+							<div class="grid__verb stretching">Ved<br>V3?</div>
+							<div class="grid__word-question">Has</div>
+							<div class="grid__pronouns-general">
 								he<br>she<br>it
 							</div>
 						</div>
@@ -91,11 +92,12 @@
 					<!--Pa ---------------------------------------------------------------------- -->
 					<div data-da=".spollers__statement, 600" class="grid__tense additional-padding statement">
 						<div class="grid__mark past-mark">Pa</div>
-						<div class="grid__pronouns colom-1">
+						<div class="grid__pronouns colom-1-3">
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They<br>He<br>She<br>It
 							</div>
-							<div class="grid__verb">Ved<br><span>V2</span></div>
+							<div class="grid__word-question">had</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
 					</div>
 					<div data-da=".spollers__denial, 600" class="grid__tense denial">
@@ -104,18 +106,18 @@
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They<br>He<br>She<br>It
 							</div>
-							<div class="grid__word-question">didn’t</div>
-							<div class="grid__verb">V</div>
+							<div class="grid__word-question">had not</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
 					</div>
 					<div data-da=".spollers__question, 600" class="grid__tense question">
 						<div class="grid__mark past-mark hide-mark">Pa</div>
 						<div class="grid__pronouns colom-1-3">
-							<div class="grid__word-question">Did</div>
+							<div class="grid__word-question">Had</div>
 							<div class="grid__pronouns-general">
 								i<br>you<br>we<br>they<br>he<br>she<br>it
 							</div>
-							<div class="grid__verb">V?</div>
+							<div class="grid__verb">Ved<br>V3?</div>
 						</div>
 					</div>
 					<!--Fu ---------------------------------------------------------------------- -->
@@ -125,8 +127,8 @@
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They<br>He<br>She<br>It
 							</div>
-							<div class="grid__word-question">will</div>
-							<div class="grid__verb">Ved</div>
+							<div class="grid__word-question">will have</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
 					</div>
 					<div data-da=".spollers__denial, 600" class="grid__tense denial">
@@ -135,18 +137,19 @@
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They<br>He<br>She<br>It
 							</div>
-							<div class="grid__word-question">won't</div>
-							<div class="grid__verb">V</div>
+							<div class="grid__word-question">won't have</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
 					</div>
 					<div data-da=".spollers__question, 600" class="grid__tense question">
 						<div class="grid__mark future-mark hide-mark">Fu</div>
-						<div class="grid__pronouns colom-1-3">
+						<div class="grid__pronouns grid-1-4">
 							<div class="grid__word-question">Will</div>
 							<div class="grid__pronouns-general">
 								i<br>you<br>we<br>they<br>he<br>she<br>it
 							</div>
-							<div class="grid__verb">V?</div>
+							<div class="grid__word-question">have</div>
+							<div class="grid__verb">Ved<br>V3?</div>
 						</div>
 					</div>
 				</div>
