--- a/continuous.html
+++ b/continuous.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Simple</title>
+	<title>Continuous</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </header> -->
-		<main class="page page-simple">
+		<main class="page page-continuous">
 			<section class="tense-time">
 				<div data-spollers class="tense-time__container">
 
@@ -49,41 +49,72 @@
 
 					<div data-da=".spollers__statement, 600" class="grid__tense additional-padding statement">
 						<div class="grid__mark present-mark">Pr</div>
-						<div class="grid__pronouns">
+						<div class="grid__pronouns grid-3-3">
 							<div class="grid__pronouns-general">
-								I<br>You<br>We<br>They
+								I
 							</div>
-							<div class="grid__verb">V</div>
+							<div class="grid__pronouns-3">
+								am
+							</div>
+							<div class="grid__verb stretching-3">Ving</div>
+							<div class="grid__pronouns-general">
+								You<br>We<br>They
+							</div>
+							<div class="grid__pronouns-3">
+								are
+							</div>
 							<div class="grid__pronouns-3">
 								He<br>She<br>It
 							</div>
-							<div class="grid__verb">Vs</div>
+							<div class="grid__pronouns-3">
+								is
+							</div>
 						</div>
 					</div>
 					<div data-da=".spollers__denial, 600" class="grid__tense denial">
 						<div class="grid__mark present-mark hide-mark">Pr</div>
-						<div class="grid__pronouns colom-3">
+						<div class="grid__pronouns grid-3-3">
 							<div class="grid__pronouns-general">
-								I<br>You<br>We<br>They
+								I
 							</div>
-							<div class="grid__denial">don't</div>
-							<div class="grid__verb stretching">V</div>
+							<div class="grid__pronouns-3">
+								am not
+							</div>
+							<div class="grid__verb stretching-3">Ving</div>
+							<div class="grid__pronouns-general">
+								You<br>We<br>They
+							</div>
+							<div class="grid__pronouns-3">
+								are not
+							</div>
 							<div class="grid__pronouns-3">
 								He<br>She<br>It
 							</div>
-							<div class="grid__denial">doesn't</div>
+							<div class="grid__pronouns-3">
+								is not
+							</div>
 						</div>
 					</div>
 					<div data-da=".spollers__question, 600" class="grid__tense question">
 						<div class="grid__mark present-mark hide-mark">Pr</div>
-						<div class="grid__pronouns colom-3">
-							<div class="grid__word-question">Do</div>
-							<div class="grid__pronouns-general">
-								i<br>you<br>we<br>they
+						<div class="grid__pronouns grid-3-3">
+							<div class="grid__pronouns-3">
+								Am
 							</div>
-							<div class="grid__verb stretching">V?</div>
-							<div class="grid__word-question">Does</div>
-							<div class="grid__pronouns-3 ">
+							<div class="grid__pronouns-general">
+								i
+							</div>
+							<div class="grid__verb stretching-3">Ving?</div>
+							<div class="grid__pronouns-3">
+								Are
+							</div>
+							<div class="grid__pronouns-general">
+								you<br>we<br>they
+							</div>
+							<div class="grid__pronouns-3">
+								Is
+							</div>
+							<div class="grid__pronouns-3">
 								he<br>she<br>it
 							</div>
 						</div>
@@ -91,31 +122,44 @@
 					<!--Pa ---------------------------------------------------------------------- -->
 					<div data-da=".spollers__statement, 600" class="grid__tense additional-padding statement">
 						<div class="grid__mark past-mark">Pa</div>
-						<div class="grid__pronouns colom-1">
+						<div class="grid__pronouns colom-3">
 							<div class="grid__pronouns-general">
-								I<br>You<br>We<br>They<br>He<br>She<br>It
+								I<br>You<br>We<br>They
 							</div>
-							<div class="grid__verb">Ved<br><span>V2</span></div>
+							<div class="grid__word-question">was</div>
+							<div class="grid__verb stretching">Ving</div>
+							<div class="grid__pronouns-general">
+								He<br>She<br>It
+							</div>
+							<div class="grid__word-question">were</div>
 						</div>
 					</div>
 					<div data-da=".spollers__denial, 600" class="grid__tense denial">
 						<div class="grid__mark past-mark hide-mark">Pa</div>
-						<div class="grid__pronouns colom-1-3">
+						<div class="grid__pronouns colom-3">
 							<div class="grid__pronouns-general">
-								I<br>You<br>We<br>They<br>He<br>She<br>It
+								I<br>You<br>We<br>They
 							</div>
-							<div class="grid__word-question">didn’t</div>
-							<div class="grid__verb">V</div>
+							<div class="grid__word-question">was not</div>
+							<div class="grid__verb stretching">Ving</div>
+							<div class="grid__pronouns-general">
+								He<br>She<br>It
+							</div>
+							<div class="grid__word-question">were not</div>
 						</div>
 					</div>
 					<div data-da=".spollers__question, 600" class="grid__tense question">
 						<div class="grid__mark past-mark hide-mark">Pa</div>
-						<div class="grid__pronouns colom-1-3">
-							<div class="grid__word-question">Did</div>
+						<div class="grid__pronouns colom-3">
+							<div class="grid__word-question">Was</div>
 							<div class="grid__pronouns-general">
-								i<br>you<br>we<br>they<br>he<br>she<br>it
+								i<br>you<br>we<br>they
 							</div>
-							<div class="grid__verb">V?</div>
+							<div class="grid__verb stretching">Ving?</div>
+							<div class="grid__word-question">Were</div>
+							<div class="grid__pronouns-general">
+								he<br>she<br>it
+							</div>
 						</div>
 					</div>
 					<!--Fu ---------------------------------------------------------------------- -->
@@ -125,8 +169,8 @@
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They<br>He<br>She<br>It
 							</div>
-							<div class="grid__word-question">will</div>
-							<div class="grid__verb">Ved</div>
+							<div class="grid__word-question">will be</div>
+							<div class="grid__verb">Ving</div>
 						</div>
 					</div>
 					<div data-da=".spollers__denial, 600" class="grid__tense denial">
@@ -135,18 +179,19 @@
 							<div class="grid__pronouns-general">
 								I<br>You<br>We<br>They<br>He<br>She<br>It
 							</div>
-							<div class="grid__word-question">won't</div>
-							<div class="grid__verb">V</div>
+							<div class="grid__word-question">won't be</div>
+							<div class="grid__verb">Ving</div>
 						</div>
 					</div>
 					<div data-da=".spollers__question, 600" class="grid__tense question">
 						<div class="grid__mark future-mark hide-mark">Fu</div>
-						<div class="grid__pronouns colom-1-3">
+						<div class="grid__pronouns grid-1-4">
 							<div class="grid__word-question">Will</div>
 							<div class="grid__pronouns-general">
 								i<br>you<br>we<br>they<br>he<br>she<br>it
 							</div>
-							<div class="grid__verb">V?</div>
+							<div class="grid__word-question">be</div>
+							<div class="grid__verb">Ving?</div>
 						</div>
 					</div>
 				</div>
