--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 
 <head>
-	<title>Main</title>
+	<title>English cheat-sheet</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220120200052">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220131183433">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,6 +55,20 @@
 					</a>
 				</ul>
 			</section>
+			<section class="another">
+				<div class="another__container">
+					<a href="irregular-verbs.html" class="tensec__link">
+						<li class="tenses__box another__box">
+							<div class="tenses__text">Irregular verbs</div>
+						</li>
+					</a>
+					<a href="reduction.html" class="tensec__link">
+						<li class="tenses__box another__box">
+							<div class="tenses__text">Reduction</div>
+						</li>
+					</a>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -74,7 +88,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20220120200052"></script>
+	<script src="js/app.min.js?_v=20220131183433"></script>
 </body>
 
 </html>
