--- a/irregular-verbs.html
+++ b/irregular-verbs.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220131183433">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220203232741">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,275 +32,19 @@
 </header> -->
 		<main class="page page-verbs">
 			<div class="verbs">
+				<div class="input__search">
+					<input id="search" autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Search"
+						class="input">
+				</div>
 				<table class="irregular-verbs">
 					<thead>
 						<tr>
-							<th scope="col">Base form</th>
-							<th scope="col">Past tense</th>
-							<th scope="col">Past participle</th>
+							<th>Base form</th>
+							<th>Past tense</th>
+							<th>Past participle</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
-							<td><em>be</em></td>
-							<td><em>was/were</em></td>
-							<td><em>been</em></td>
-						</tr>
-						<tr>
-							<td><em>begin</em></td>
-							<td><em>began</em></td>
-							<td><em>begun</em></td>
-						</tr>
-						<tr>
-							<td><em>break</em></td>
-							<td><em>broke</em></td>
-							<td><em>broken</em></td>
-						</tr>
-						<tr>
-							<td><em>bring</em></td>
-							<td><em>brought</em></td>
-							<td><em>brought</em></td>
-						</tr>
-						<tr>
-							<td><em>buy</em></td>
-							<td><em>bought</em></td>
-							<td><em>bought</em></td>
-						</tr>
-						<tr>
-							<td><em>build</em></td>
-							<td><em>built</em></td>
-							<td><em>built</em></td>
-						</tr>
-						<tr>
-							<td><em>choose</em></td>
-							<td><em>chose</em></td>
-							<td><em>chosen</em></td>
-						</tr>
-						<tr>
-							<td><em>come</em></td>
-							<td><em>came</em></td>
-							<td><em>come</em></td>
-						</tr>
-						<tr>
-							<td><em>cost</em></td>
-							<td><em>cost</em></td>
-							<td><em>cost</em></td>
-						</tr>
-						<tr>
-							<td><em>cut</em></td>
-							<td><em>cut</em></td>
-							<td><em>cut</em></td>
-						</tr>
-						<tr>
-							<td><em>do</em></td>
-							<td><em>did</em></td>
-							<td><em>done</em></td>
-						</tr>
-						<tr>
-							<td><em>draw</em></td>
-							<td><em>drew</em></td>
-							<td><em>drawn</em></td>
-						</tr>
-						<tr>
-							<td><em>drive</em></td>
-							<td><em>drove</em></td>
-							<td><em>driven</em></td>
-						</tr>
-						<tr>
-							<td><em>eat</em></td>
-							<td><em>ate</em></td>
-							<td><em>eaten</em></td>
-						</tr>
-						<tr>
-							<td><em>feel</em></td>
-							<td><em>felt</em></td>
-							<td><em>felt</em></td>
-						</tr>
-						<tr>
-							<td><em>find</em></td>
-							<td><em>found</em></td>
-							<td><em>found</em></td>
-						</tr>
-						<tr>
-							<td><em>get</em></td>
-							<td><em>got</em></td>
-							<td><em>got</em></td>
-						</tr>
-						<tr>
-							<td><em>give</em></td>
-							<td><em>gave</em></td>
-							<td><em>given</em></td>
-						</tr>
-						<tr>
-							<td><em>go</em></td>
-							<td><em>went</em></td>
-							<td><em>gone</em></td>
-						</tr>
-						<tr>
-							<td><em>have</em></td>
-							<td><em>had</em></td>
-							<td><em>had</em></td>
-						</tr>
-						<tr>
-							<td><em>hear</em></td>
-							<td><em>heard</em></td>
-							<td><em>heard</em></td>
-						</tr>
-						<tr>
-							<td><em>hold</em></td>
-							<td><em>held</em></td>
-							<td><em>held</em></td>
-						</tr>
-						<tr>
-							<td><em>keep</em></td>
-							<td><em>kept</em></td>
-							<td><em>kept</em></td>
-						</tr>
-						<tr>
-							<td><em>know</em></td>
-							<td><em>knew</em></td>
-							<td><em>known</em></td>
-						</tr>
-						<tr>
-							<td><em>leave</em></td>
-							<td><em>left</em></td>
-							<td><em>left</em></td>
-						</tr>
-						<tr>
-							<td><em>lead</em></td>
-							<td><em>led</em></td>
-							<td><em>led</em></td>
-						</tr>
-						<tr>
-							<td><em>let</em></td>
-							<td><em>let</em></td>
-							<td><em>let</em></td>
-						</tr>
-						<tr>
-							<td><em>lie</em></td>
-							<td><em>lay</em></td>
-							<td><em>lain</em></td>
-						</tr>
-						<tr>
-							<td><em>lose</em></td>
-							<td><em>lost</em></td>
-							<td><em>lost</em></td>
-						</tr>
-						<tr>
-							<td><em>make</em></td>
-							<td><em>made</em></td>
-							<td><em>made</em></td>
-						</tr>
-						<tr>
-							<td><em>mean</em></td>
-							<td><em>meant</em></td>
-							<td><em>meant</em></td>
-						</tr>
-						<tr>
-							<td><em>meet</em></td>
-							<td><em>met</em></td>
-							<td><em>met</em></td>
-						</tr>
-						<tr>
-							<td><em>pay</em></td>
-							<td><em>paid</em></td>
-							<td><em>paid</em></td>
-						</tr>
-						<tr>
-							<td><em>put</em></td>
-							<td><em>put</em></td>
-							<td><em>put</em></td>
-						</tr>
-						<tr>
-							<td><em>run</em></td>
-							<td><em>ran</em></td>
-							<td><em>run</em></td>
-						</tr>
-						<tr>
-							<td><em>say</em></td>
-							<td><em>said</em></td>
-							<td><em>said</em></td>
-						</tr>
-						<tr>
-							<td><em>see</em></td>
-							<td><em>saw</em></td>
-							<td><em>seen</em></td>
-						</tr>
-						<tr>
-							<td><em>sell</em></td>
-							<td><em>sold</em></td>
-							<td><em>sold</em></td>
-						</tr>
-						<tr>
-							<td><em>send</em></td>
-							<td><em>sent</em></td>
-							<td><em>sent</em></td>
-						</tr>
-						<tr>
-							<td><em>set</em></td>
-							<td><em>set</em></td>
-							<td><em>set</em></td>
-						</tr>
-						<tr>
-							<td><em>sit</em></td>
-							<td><em>sat</em></td>
-							<td><em>sat</em></td>
-						</tr>
-						<tr>
-							<td><em>speak</em></td>
-							<td><em>spoke</em></td>
-							<td><em>spoken</em></td>
-						</tr>
-						<tr>
-							<td><em>spend</em></td>
-							<td><em>spent</em></td>
-							<td><em>spent</em></td>
-						</tr>
-						<tr>
-							<td><em>stand</em></td>
-							<td><em>stood</em></td>
-							<td><em>stood</em></td>
-						</tr>
-						<tr>
-							<td><em>take</em></td>
-							<td><em>took</em></td>
-							<td><em>taken</em></td>
-						</tr>
-						<tr>
-							<td><em>teach</em></td>
-							<td><em>taught</em></td>
-							<td><em>taught</em></td>
-						</tr>
-						<tr>
-							<td><em>tell</em></td>
-							<td><em>told</em></td>
-							<td><em>told</em></td>
-						</tr>
-						<tr>
-							<td><em>think</em></td>
-							<td><em>thought</em></td>
-							<td><em>thought</em></td>
-						</tr>
-						<tr>
-							<td><em>understand</em></td>
-							<td><em>understood</em></td>
-							<td><em>understood</em></td>
-						</tr>
-						<tr>
-							<td><em>wear</em></td>
-							<td><em>wore</em></td>
-							<td><em>worn</em></td>
-						</tr>
-						<tr>
-							<td><em>win</em></td>
-							<td><em>won</em></td>
-							<td><em>won</em></td>
-						</tr>
-						<tr>
-							<td><em>write</em></td>
-							<td><em>wrote</em></td>
-							<td><em>written</em></td>
-						</tr>
+					<tbody id="myTable">
 					</tbody>
 				</table>
 			</div>
@@ -324,7 +68,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20220131183433"></script>
+	<script src="js/app.min.js?_v=20220203232741"></script>
 </body>
 
 </html>
