--- a/reduction.html
+++ b/reduction.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 
 <head>
-	<title>Irregular verbs</title>
+	<title>Reduction</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220131183433">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220203232741">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -385,7 +385,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20220131183433"></script>
+	<script src="js/app.min.js?_v=20220203232741"></script>
 </body>
 
 </html>
