--- a/irregular-verbs.html
+++ b/irregular-verbs.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220203232741">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220204234552">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,8 +33,7 @@
 		<main class="page page-verbs">
 			<div class="verbs">
 				<div class="input__search">
-					<input id="search" autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Search"
-						class="input">
+					<input id="search" autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Search" class="input">
 				</div>
 				<table class="irregular-verbs">
 					<thead>
@@ -44,7 +43,7 @@
 							<th>Past participle</th>
 						</tr>
 					</thead>
-					<tbody id="myTable">
+					<tbody class="table">
 					</tbody>
 				</table>
 			</div>
@@ -68,7 +67,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20220203232741"></script>
+	<script src="js/app.min.js?_v=20220204234552"></script>
 </body>
 
 </html>
