--- a/reduction.html
+++ b/reduction.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220211022228">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220211153631">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -387,19 +387,19 @@
 						<div class="info-content__left">
 							<div class="info-content__text">You can throw me a donat for coffee ☕</div>
 							<div class="info-content__donat">
-								<img src="img/icons/Donation_alerts.svg" alt="icon Donation alerts">
+								<a href="https://www.donationalerts.com/r/kurkulio"><img src="img/icons/Donation_alerts.svg" alt="icon Donation alerts"></a>
 							</div>
 						</div>
 						<div class="info-content__right">
 							<div class="info-content__image"><picture><source srcset="img/Person.webp"type="image/webp"><img src="img/Person.png" alt="person"></picture></div>
 							<div class="info-content__socio">
-								<a href="" class="info-content__socio-link">
+								<a target="_blank" href="https://github.com/KurKuza" class="info-content__socio-link">
 									<img src="img/icons/GitHub.svg" alt="icon GitHub"></a>
-								<a href="" class="info-content__socio-link">
+								<a target="_blank" href="https://www.facebook.com/profile.php?id=100076109886006" class="info-content__socio-link">
 									<img src="img/icons/Facebook.svg" alt="icon Facebook"></a>
-								<a href="" class="info-content__socio-link">
+								<a target="_blank" href="https://vk.com/kurkulio" class="info-content__socio-link">
 									<img src="img/icons/Vk.svg" alt="icon Vk"></a>
-								<a href="" class="info-content__socio-link">
+								<a target="_blank" href="https://t.me/KurKulio" class="info-content__socio-link">
 									<img src="img/icons/Tg.svg" alt="icon Telegram"></a>
 							</div>
 						</div>
@@ -408,7 +408,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220211022228"></script>
+	<script src="js/app.min.js?_v=20220211153631"></script>
 </body>
 
 </html>
