--- a/continuous.html
+++ b/continuous.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 
 <head>
-	<title>Continuous</title>
+	<title>Главная</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220211155004">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220217211801">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,6 +26,8 @@
 							<li class="menu__item"><a href="perfect_continuous.html" class="menu__link">Perfect Continuous</a></li>
 							<li class="menu__item"><a href="irregular-verbs.html" class="menu__link">Irregular Verbs</a></li>
 							<li class="menu__item"><a href="reduction.html" class="menu__link">Reduction</a></li>
+							<!-- <li class="menu__item"><a href="" class="menu__link">Useful</a></li> -->
+							<!-- <li class="menu__item"><img src="img/icons/auto.svg" alt="auto switche"></li>-->
 							<li class="menu__item info"><button data-popup=".popup" class="info__button"><img src="img/icons/info.svg" alt="info"></button> </li>
 						</ul>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
@@ -33,8 +35,6 @@
 				</div>
 			</div>
 		</header>
-		<!-- <li class="menu__item"><a href="" class="menu__link">Useful</a></li> -->
-		<!-- <li class="menu__item"><img src="img/icons/auto.svg" alt="auto switche"></li>-->
 		<main class="page page-continuous">
 			<section class="tense-time">
 				<div data-spollers class="tense-time__container">
@@ -222,7 +222,11 @@
 							</div>
 						</div>
 						<div class="info-content__right">
-							<div class="info-content__image"><picture><source srcset="img/Person.webp"type="image/webp"><img src="img/Person.png" alt="person"></picture></div>
+							<div class="info-content__image">
+								<picture>
+									<source srcset="img/Person.webp" type="image/webp"><img src="img/Person.png" alt="person">
+								</picture>
+							</div>
 							<div class="info-content__socio">
 								<a target="_blank" href="https://github.com/KurKuza" class="info-content__socio-link">
 									<img src="img/icons/GitHub.svg" alt="icon GitHub"></a>
@@ -239,7 +243,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220211155004"></script>
+	<script src="js/app.min.js?_v=20220217211801"></script>
 </body>
 
 </html>
