--- a/passive_voice.html
+++ b/passive_voice.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Main</title>
+	<title>Passive voice</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -35,50 +35,96 @@
 				</div>
 			</div>
 		</header>
-		<main class="page page-home">
-			<section class="tenses">
-				<div class="tenses__container">
-					<a href="simple.html" class="tensec__link">
-						<div class="tenses__box">
-							<div class="tenses__text">Simple</div>
+		<main class="page page-passive">
+			<section class="tense-time">
+				<div data-spollers class="tense-time__container">
+
+					<div class="spollers__item">
+						<button type="button" data-spoller class="marks__say">Simple</button>
+						<div class="spollers__statement"></div>
+					</div>
+					<div class="spollers__item">
+						<button type="button" data-spoller class="marks__say">Continuous</button>
+						<div class="spollers__denial"></div>
+					</div>
+					<div class="spollers__item">
+						<button type="button" data-spoller class="marks__say">Perfect</button>
+						<div class="spollers__question"></div>
+					</div>
+					<!--Pr ----------------------------------------------------------------------------------------------------- -->
+					<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
+						<div class="grid__mark present-mark">Pr</div>
+						<div class="grid__pronouns grid__1-2">
+							<div class="grid__pronouns-general">
+								am<br>is<br>are
+							</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
-					</a>
-					<a href="continuous.html" class="tensec__link">
-						<div class="tenses__box">
-							<div class="tenses__text">Continuous</div>
+					</div>
+					<div data-da=".spollers__denial, 767" class="grid__tense denial">
+						<div class="grid__mark present-mark hide-mark">Pr</div>
+						<div class="grid__pronouns colom-1-3">
+							<div class="grid__pronouns-general">
+								am<br>is<br>are
+							</div>
+							<div class="grid__word-question">being</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
-					</a>
-					<a href="perfect.html" class="tensec__link">
-						<div class="tenses__box">
-							<div class="tenses__text">Perfect</div>
+					</div>
+					<div data-da=".spollers__question, 767" class="grid__tense question">
+						<div class="grid__mark present-mark hide-mark">Pr</div>
+						<div class="grid__pronouns colom-1-3">
+							<div class="grid__pronouns-general">
+								have<br>has
+							</div>
+							<div class="grid__word-question">been</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
-					</a>
-					<a href="perfect_continuous.html" class="tensec__link">
-						<div class="tenses__box">
-							<div class="tenses__text">Perfect<br>continuous</div>
+					</div>
+					<!--Pa ---------------------------------------------------------------------- -->
+					<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
+						<div class="grid__mark past-mark">Pa</div>
+						<div class="grid__pronouns grid__1-2">
+							<div class="grid__pronouns-general">
+								was<br>were
+							</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
-					</a>
+					</div>
+					<div data-da=".spollers__denial, 767" class="grid__tense denial">
+						<div class="grid__mark past-mark hide-mark">Pa</div>
+						<div class="grid__pronouns colom-1-3">
+							<div class="grid__pronouns-general">
+								was<br>were
+							</div>
+							<div class="grid__word-question">being</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
+					<div data-da=".spollers__question, 767" class="grid__tense question">
+						<div class="grid__mark past-mark hide-mark">Pa</div>
+						<div class="grid__pronouns colom-1-3">
+							<div class="grid__pronouns-general">
+								had
+							</div>
+							<div class="grid__word-question">been</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
+					<!--Fu ---------------------------------------------------------------------- -->
+					<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
+						<div class="grid__mark future-mark">Fu</div>
+						<div class="grid__pronouns grid__1-2">
+							<div class="grid__pronouns-general">
+								will be
+							</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
 				</div>
 			</section>
-			<section class="another">
-				<div class="another__container">
-					<a href="passive_voice.html" class="tensec__link">
-						<div class="tenses__box another__box">
-							<div class="tenses__text">Passive voice</div>
-						</div>
-					</a>
-					<a href="irregular-verbs.html" class="tensec__link">
-						<div class="tenses__box another__box">
-							<div class="tenses__text">Irregular verbs</div>
-						</div>
-					</a>
-					<a href="reduction.html" class="tensec__link">
-						<div class="tenses__box another__box">
-							<div class="tenses__text">Reduction</div>
-						</div>
-					</a>
-				</div>
-			</section>
+
+
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
